--- a/src/components/home/UserOption/userOption.css
+++ b/src/components/home/UserOption/userOption.css
@@ -14,6 +14,10 @@
     --clyppy: polygon(0 0, 0 100%,100% 100%,100% 0%);
 }
 
+.navbg{
+    background-color: rgb(0 0 0 / .5);
+}
+
 
 @media (min-width:1024px)  {
     .nav-menu{
