--- a/src/components/home/UserOption/userOption.css
+++ b/src/components/home/UserOption/userOption.css
@@ -1,5 +1,5 @@
 .nav-menu{
-    @apply flex items-center flex-col absolute top-14 left-0 right-0 bg-gray-800 text-white w-full
+    @apply flex items-center flex-col absolute top-14 left-0 right-0 bg-gray-600 text-white w-full
     md:top-16 
 }
 
@@ -15,7 +15,7 @@
 }
 
 .navbg{
-    background-color: rgb(0 0 0 / .5);
+    @apply bg-gray-600
 }
 
 
