--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .btn{
-    @apply bg-gray-600 px-5 py-2 rounded-lg shadow-lg font-semibold text-sm
+    @apply bg-gray-600 px-5 py-2 rounded-md shadow-lg font-semibold text-sm
     text-white inline-block w-full hover:text-white hover:bg-gray-800 focus:outline-none
     focus:ring focus:ring-offset-2 focus:ring-gray-800 focus:ring-opacity-50 active:bg-gray-900
 }
