--- a/src/pages/estudio/estudio.css
+++ b/src/pages/estudio/estudio.css
@@ -7,7 +7,7 @@
 }
 
 .estudio-btn{
-    @apply bg-gray-600 px-5 py-2  shadow-lg font-semibold text-sm
-    text-white inline-block w-full hover:text-white hover:bg-gray-800 focus:outline-none
+    @apply bg-gray-600 px-5 py-2 block m-auto rounded-md shadow-lg font-semibold text-sm
+    text-white  w-4/5 hover:text-white hover:bg-gray-800 focus:outline-none
     focus:ring focus:ring-offset-2 focus:ring-gray-800 focus:ring-opacity-50 active:bg-gray-900
 }
