dropdown nav terminado

--- a/src/components/Nav/navbar.css
+++ b/src/components/Nav/navbar.css
@@ -68,6 +68,8 @@ a {
     border-radius: var(--border-radius);
     padding: 1rem;
     overflow: hidden;
+    
+    transition: heigth var(--speed) ease;
 
 }
 
@@ -83,3 +85,45 @@ a {
 .menu-item:hover{
     background-color: #525357;
 }
+
+
+
+.menu{
+    width: 100%;
+}
+
+
+ 
+.menu-primary-enter{
+    position: absolute;
+    transform: translateX(-110%);
+}
+.menu-primary-enter-active{
+    transform: translateX(0%);
+    transition: all var(--speed) ease;
+}
+.menu-primary-exit{
+    position: absolute;
+}
+.menu-primary-exit-active{
+    transform: translateX(-110%);
+    transition: all var(--speed) ease;
+}
+
+
+
+.menu-secondary-enter{
+    position: absolute;
+    transform: translateX(110%);
+}
+.menu-secondary-enter-active{
+    transform: translateX(0%);
+    transition: all var(--speed) ease;
+}
+.menu-secondary-exit{
+    position: absolute;
+}
+.menu-secondary-exit-active{
+    transform: translateX(110%);
+    transition: all var(--speed) ease;
+} 
