--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,13 @@
 @tailwind utilities;
 
 .btn{
-    @apply bg-gray-600 px-5 py-2 rounded-md shadow-lg font-semibold text-sm
+    @apply bg-gray-600 px-5 py-2 rounded-md shadow-lg font-semibold text-sm border-2 border-gray-600
     text-white inline-block w-full hover:text-white hover:bg-gray-800 focus:outline-none
+    focus:ring focus:ring-offset-2 focus:ring-gray-800 focus:ring-opacity-50 active:bg-gray-900
+}
+.btn-black{
+    @apply bg-white px-5 py-2 rounded-md shadow-lg font-semibold text-sm border-2 border-gray-600
+    text-gray-600 inline-block w-full hover:text-white hover:bg-gray-800 focus:outline-none
     focus:ring focus:ring-offset-2 focus:ring-gray-800 focus:ring-opacity-50 active:bg-gray-900
 }
 
