--- a/src/components/home/UserOption/userOption.css
+++ b/src/components/home/UserOption/userOption.css
@@ -34,6 +34,12 @@
     .nav-transicion-false{
         --clyppy: polygon(0 0, 0 100%,100% 100%,100% 0%);
     }
+
+    .nav-menu{
+        width: 20rem;
+        right: 2rem;
+        left: unset;
+    }
     
 
     .show{
@@ -48,7 +54,7 @@
     }
 
     .nav-hover{
-        @apply hover:bg-gray-600 hover:rounded-sm hover:text-white rounded-sm  font-semibold
+        @apply hover:bg-gray-600 hover:rounded-md hover:text-white rounded-sm  font-semibold
     }
     
     .efecto{
