--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,29 @@
     
 }
 
+.alerta{
+    @apply text-xl  text-white rounded-md absolute right-4 text-center p-2 top-2 shadow-md
+}
 
+.error{
+    @apply bg-red-600
+}
+
+.ok{
+    @apply bg-green-600
+}
+
+.input-estudioForm_div--nc{
+    @apply my-2 flex items-center pl-1 border-2 border-gray-500 rounded-md shadow-sm
+}
+
+.input-estudioForm{
+    @apply py-1  w-full focus:outline-none
+}
+
+.input-icon{
+    @apply text-2xl p-1 text-gray-600
+}
 
 
 
