tailwind exploto y  no me accepta el responsive

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,10 @@
 .sectionHeigth{
     height: 76vh;
 }
-@media (min-width:1024px) {
+@media (min-width:768px) {
+    .mecagoentumadre{
+        padding: 2.5rem;
+    }
     
     
 }
